<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginPage"
    android:background="@color/charcoalBlack">

    <ImageView
        android:id="@+id/login_imageView"
        android:layout_width="131dp"
        android:layout_height="101dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/welcome_img_desc"
        android:src="@drawable/baseline_videogame_asset_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="246dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="Enter Your Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_textView"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Password"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="Enter Your Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:contentDescription="login buttons"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.276"
        tools:ignore="hardCodedText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button">

        <TextView
            android:id="@+id/nothaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/intent_registerPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textColor="@color/light_blue"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>